# aortacfd-agent

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: weekly-digest.yml
.streamlit/: config.toml
demo/: app.py  build_case.py  components.py  demo_data.py  sample_referrals.py  styles.py
demo/assets/: BPM120_hemodynamics_report.txt  agent_config.json  agent_rationale.md  agent_trace.jsonl  base_config.json
demo/assets/bpm120/: BPM120.csv
deploy/aws/: README.md  batch-compute-env.json  batch-job-definition.json  batch_entrypoint.py  run_batch.sh
docs/: architecture.md  sophia_pitch.md
examples/: end_to_end_demo.py
paper_digest/: __init__.py  classifier.py  corpus.py  digest.py  sources.py
paper_digest/templates/: digest.md.j2  index.md.j2  rss.xml.j2
scripts/: chunk_pdfs.py  fetch_open_access.py  ingest_bib_corpus.py  ingest_corpus.py  live_test_coordinator.py  live_test_dry_run_cfd.py  live_test_intake.py
src/aortacfd_agent/: __init__.py  cli.py  config.py  coordinator.py  loop.py
src/aortacfd_agent/_subproc_shims/: __init__.py
src/aortacfd_agent/_subproc_shims/pydantic_mask/: pydantic.py
src/aortacfd_agent/agents/: __init__.py  config.py  execution.py  intake.py  literature.py  results.py
src/aortacfd_agent/backends/: __init__.py  anthropic_backend.py  base.py  factory.py  fake.py  openai_compat.py
src/aortacfd_agent/corpus/: __init__.py  bib_store.py  ingest.py  store.py
src/aortacfd_agent/corpus/index/: aortacfd_corpus.json
src/aortacfd_agent/corpus/papers/: FETCH_REPORT.md  NEXT_BATCH.md  README.md
src/aortacfd_agent/prompts/: intake.md  literature.md  results.md
src/aortacfd_agent/schemas/: clinical_profile.json  parameter_justification.json
src/aortacfd_agent/tools/: __init__.py  config_io.py  geometry.py  literature.py  mesh.py  outputs.py  physics.py  results_io.py
src/aortacfd_agent/trace/: __init__.py  logger.py
tests/: conftest.py  test_backends.py  test_config_agent.py  test_coordinator.py  test_execution_agent.py  test_intake_agent.py  test_literature_agent.py  test_loop.py  test_results_agent.py  test_tools.py
tests/fixtures/: corpus_chunks.json
tests/fixtures/sample_reports/: coarctation_paediatric.txt  healthy_adult.txt  infant_complex.txt  marfan_dilated_root.txt  post_surgical_repair.txt
